[onewire] Deprecations (#20828)
Signed-off-by: Holger Friedrich <mail@holger-friedrich.de>